--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -6,4 +6,5 @@
 ##  SPDX-License-Identifier: MIT
 ##==================================================================================================
 
-add_demo( "mupp" deps/lua.cpp  )
+add_demo( "mupp" deps/lua.cpp   )
+add_demo( "mupp" io/session.cpp   )
