Redistribute dependencies and responsabilities
 - Make game a real class handlign all game related tasks
 - Changed all network code to rely on game for non-network operations
 - Cleanup

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,13 @@
 ##==================================================================================================
 ##  MUPP - MUD in C++
-##  Copyright 2019 Joel FALCOU
+##  Copyright 2019-2020 Joel FALCOU
 ##
 ##  Licensed under the MIT License <http://opensource.org/licenses/MIT>.
 ##  SPDX-License-Identifier: MIT
 ##==================================================================================================
 
 add_library ( mupp
+              game.cpp
               session.cpp
               session_manager.cpp
             )
