More game/player configurability
 - Complete player login->play State Machine
 - Make game configurable via LUA files
 - Fix bug where players can't be deleted even when disconnected

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,6 @@ add_subdirectory(src)
 install(DIRECTORY ${PROJECT_SOURCE_DIR}/include DESTINATION .)
 
 ## =================================================================================================
-## Demo targets
+## Actual game
 ## =================================================================================================
 include(demo)
