--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -6,6 +6,4 @@
 ##  SPDX-License-Identifier: MIT
 ##==================================================================================================
 
-add_demo( "mupp" deps/tabulate.cpp  )
-add_demo( "mupp" deps/lua.cpp       )
-add_demo( "mupp" system/session.cpp )
+add_demo( "mupp" game.cpp )
