Major revamp of LUA/C++ interaction
* Make player input treated as enqueuable command which
  processing is decorrelated from the network layer

* Player input processing is now handled by game state objects
  that can be changed dynamically

* Make most of command shandled by C++ instead of lengthy, overly
  complex LUA bindings

* Move around scripts and reduced number of required LUA functions

- Make pl

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,8 +7,14 @@
 ##==================================================================================================
 
 add_library ( mudpp SHARED
+              actions.cpp
+              command.cpp
+              create.cpp
               game.cpp
               io.cpp
+              load.cpp
+              login.cpp
+              play.cpp
               player.cpp
               room.cpp
               session.cpp
